fixed transaction bug